--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         Редактировать
                     </button>
                 </div>
+                <div class="card_container_two_adaptive">
                 <div class="card_container_two">
                     <h2 class="card_container_first"><span class="card_container_first_text">Статистика</span></h2>
                     <dl class="card_container_info">
@@ -61,75 +62,64 @@
                         </span>
                     </dl>
                 </div>
+            </div>
             </section>
             <section>
                 <div class="grid">
-                    <div>
-                        <div>Название работы</div>
-                        <div>Дата загрузки</div>
-                        <div>Научный руководитель</div>
-                        <div>Уникальность</div>
-                    </div>
-                    <div>
-                        <div>Привлечение инвестиций как фактор развития экономики</div>
-                        <div>21.05.2019</div>
-                        <div>Асаншоева А.М.</div>
-                        <div>89%</div>
-                    </div>
-                    <div>
-                        <div>The role of accounting in sustainable development</div>
-                        <div>11.02.2019</div>
-                        <div>Шаляпина В.С.</div>
-                        <div>78%</div>
-                    </div>
-                    <div>
-                        <div>Сценарный анализ как инструмент учета рисков инвестиционного проекта</div>
-                        <div>05.09.2018</div>
-                        <div>Васильев М.Г.</div>
-                        <div>67%</div>
-                    </div>
-                    <div>
-                        <div>Глобальные и региональные инвестиционные тенденции</div>
-                        <div>09.07.2018</div>
-                        <div>Асаншоева А.М.</div>
-                        <div>73%</div>
-                    </div>
-                    <div>
-                        <div>Systemic risks in financial markets</div>
-                        <div>18.05.2018</div>
-                        <div>Леонидов В.Б.</div>
-                        <div>77%</div>
-                    </div>
-                    <div>
-                        <div>The influence of tax regulation liberalisation on the domestic debt market</div>
-                        <div>09.03.2018</div>
-                        <div>Шаляпина В.С.</div>
-                        <div>82%</div>
-                    </div>
-                    <div>
-                        <div>Биткоин как новый вид инвестиций</div>
-                        <div>29.01.2018</div>
-                        <div>Асаншоева А.М.</div>
-                        <div>71%</div>
-                    </div>
-                    <div>
-                        <div>Проблема воспроизводства жилищного фонда в России</div>
-                        <div>08.11.2017</div>
-                        <div>Васильев М.Г.</div>
-                        <div>65%</div>
-                    </div>
-                    <div>
-                        <div>Влияние безработицы на экономику СНГ</div>
-                        <div>17.09.2017</div>
-                        <div>Васильев М.Г.</div>
-                        <div>68%</div>
-                    </div>
-                    <div>
-                        <div>Мировой валютный рынок Форекс</div>
-                        <div>02.07.2017</div>
-                        <div>Васильев М.Г.</div>
-                        <div>67%</div>
-                    </div>
+                        <div class="grid_item"><span class="grid_item_text">Название работы</span></div>
+                        <div class="grid_item"><span class="grid_item_text">Дата загрузки</span></div>
+                        <div class="grid_item"><span class="grid_item_text">Научный руководитель</span></div>
+                        <div class="grid_item"><span class="grid_item_text">Уникальность</span></div>
+ 
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Привлечение инвестиций как фактор развития экономики</span></div>
+                        <div class="grid_item"><span class="grid_item_text">21.05.2019</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">89%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">The role of accounting in sustainable development</span></div>
+                        <div class="grid_item"><span class="grid_item_text">11.02.2019</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Шаляпина В.С.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">78%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Сценарный анализ как инструмент учета рисков инвестиционного проекта</span></div>
+                        <div class="grid_item"><span class="grid_item_text">05.09.2018</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">67%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Глобальные и региональные инвестиционные тенденции</span></div>
+                        <div class="grid_item"><span class="grid_item_text">09.07.2018</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">73%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Systemic risks in financial markets</span></div>
+                        <div class="grid_item"><span class="grid_item_text">18.05.2018</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Леонидов В.Б.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">77%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">The influence of tax regulation liberalisation on the domestic debt market</span></div>
+                        <div class="grid_item"><span class="grid_item_text">09.03.2018</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Шаляпина В.С.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">82%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Биткоин как новый вид инвестиций</span></div>
+                        <div class="grid_item"><span class="grid_item_text">29.01.2018</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Асаншоева А.М.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">71%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Проблема воспроизводства жилищного фонда в России</span></div>
+                        <div class="grid_item"><span class="grid_item_text">08.11.2017</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">65%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Влияние безработицы на экономику СНГ</span></div>
+                        <div class="grid_item"><span class="grid_item_text">17.09.2017</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">68%</span></div>
+
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Мировой валютный рынок Форекс</span></div>
+                        <div class="grid_item"><span class="grid_item_text">02.07.2017</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">Васильев М.Г.</span></div>
+                        <div class="grid_item"><span class="grid_item_text grid_item_text_blue">67%</span></div>
                 </div>
             </section>
         </main>
