feat: Доделан адаптив
-проект перемещен в отдельную папку

--- a/figma1/index.html
+++ b/figma1/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header class="header">
             <nav class="header_nav">
-                <a class="header_nav_firsttext">НЛК</a>
+                <a class="nav_firsttext">НЛК</a>
                 <a>Портфолио</a>
                 <a>Рейтинг</a>
                 <a>Помошь</a>
@@ -28,41 +28,39 @@
                     Добавить работу
                 </button>
             </section>
-            <section class="cards_container card_container_left">
-                <div class="card_container">
-                    <h2 class="card_container_first"><span class="card_container_first_text">Ваш профиль</span></h2>
-                    <h3 class="card_container_H">Сергей Александрович Фролов</h3>
-                    <dl class="card_container_info">
+            <section class="cardsСontainer card_left">
+                <div class="cardsContainer_card">
+                    <h2 class="card_first"><span class="card_first_text">Ваш профиль</span></h2>
+                    <h3 class="card_H">Сергей Александрович Фролов</h3>
+                    <p class="card_info">
                         <span>
-                        <dt class="card_container_text_bold">Научная степень:</dt><dd>Магистр.</dd>
+                            <span class="card_text_bold">Научная степень:</span>Магистр.
                         </span>
                         <span>
-                        <dt class="card_container_text_bold">Специализация:</dt><dd>Инвестиционные проблемы экономически развивающихся рынков.</dd>
+                            <span class="card_text_bold">Специализация:</span>Инвестиционные проблемы экономически развивающихся рынков.
                         </span>
-                    </dl>
-                    <button class="card_container_button">
+                    </p>
+                    <button class="card_button">
                         Редактировать
                     </button>
                 </div>
-                <div class="card_container_two_adaptive">
-                <div class="card_container_two">
-                    <h2 class="card_container_first"><span class="card_container_first_text">Статистика</span></h2>
-                    <dl class="card_container_info">
-                        <span>
-                        <dt class="card_container_text_bold">На платформе:</dt><dd>2 года.</dd>
+                <div class="cardsContainer_card_two">
+                    <h2 class="card_first"><span class="card_first_text">Статистика</span></h2>
+                    <p class="card_info">
+                        <span >
+                        <span class="card_text_bold">На платформе:</span>2 года.
                         </span>
-                        <span>
-                        <dt class="card_container_text_bold">Добавлено работ:</dt><dd>10</dd>
+                        <span >
+                        <span class="card_text_bold">Добавлено работ:</span>10
                         </span>
-                        <span>
-                        <dt class="card_container_text_bold">Средняя уникальность:</dt><dd>75%</dd>
+                        <span >
+                        <span class="card_text_bold">Средняя уникальность:</span>75%
                         </span>
-                        <span>
-                        <dt class="card_container_text_bold">Языки работ:</dt><dd>русский, английский</dd>
+                        <span >
+                        <span class="card_text_bold">Языки работ:</span>русский, английский
                         </span>
-                    </dl>
+                    </p>
                 </div>
-            </div>
             </section>
             <section>
                 <div class="grid">
