--- a/figma2/index.html
+++ b/figma2/index.html
@@ -44,13 +44,13 @@
                         <img class="firstSection_logoContainer_logo" src="image/Mebella.png">
                     </div>
                     <div class="firstSection_content">
-                        <div>
+                        <div class="firstSection_images">
                             <img class="firstSection_content_matras" src="image/matras.png">
+                            <img class="firstSection_content_baige" src="image/baige.png">
                         </div>
                         <div>
                             <img>
                             <div>
-                                <a>
                                     <h1 class="matras_text">Матрас Monday</h1>
                                     <p class="matras_text matras_text_left">80 x 200</p>
                                     <p class="matras_cost_container"><span class="matras_cost_line">15 750₽</span><span class="matras_cost">13 388₽</span></p>
@@ -59,7 +59,6 @@
                                         <li class="ul_block">Максимальная нагрузка - 140кг</li>
                                         <li class="ul_block" >Высота матраса - 20см</li>
                                     </ul>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -71,6 +70,60 @@
                         <input class="customRadio" type="radio" name="group1">
                         <input class="customRadio" type="radio" name="group1">
                     </div>
+                </div>
+            </section>
+            <section class="secondSection">
+                <div class="secondSection_card" >
+
+                </div>
+                <div class="secondSection_card" >
+
+                </div>
+                <div class="secondSection_card" >
+
+                </div>
+                <div class="secondSection_card" >
+
+                </div>
+            </section>
+            <section class="thirdSection">
+                <div  class="thirdSection_container">
+                    <img src="image/thirdSectionImage.png" class="thirdSection_image">
+                </div>
+                <div class="thirdSection_container_column">
+                    <h2 class="thirdSection_h">Mebello - особенный салон мебели в Туле</h2>
+                    <p class="thirdSection_text"> 
+                        Салон Mebello - не просто магазин мебели на любой вкус. 
+                        Здесь представлина шировая линейка производителей на любой вкус. Наши основные преимущества. 
+                        Далее описательный текст на несколько абзацев.
+                        Салон Mebello - не просто магазин мебели на любой вкус. 
+                        Здесь представлина шировая линейка производителей на любой вкус. 
+                        Наши основные преимущества. Далее описательный текст на несколько абзацев. 
+                        Салон Mebello - не просто магазин мебели на любой вкус. 
+                        Здесь представлина шировая линейка производителей на любой вкус. 
+                        Наши основные преимущества. Далее описательный текст на несколько абзацев.
+                    </p>
+                </div>
+            </section>
+            <section class="fourSection">
+                <div class="fourSection_container">
+                    <h2 class="fourSection_H">Не нашли того, что искали? </h2>
+                    <p class="fourSection_Text">Оставьте свой номер и мы подберём для Вас всё, что нужно.</p>
+                    <form class="fourSection_form">
+                        <input type="text" placeholder="Телефон" class="fourSection_input">
+                        <button class="fourSection_button">ОТПРАВИТЬ</button>
+                    </form>
+                </div>
+                <div class="fourSection_ImageContainer">
+                    <img src="image/divan.png" class="fourSection_divan">
+                </div>
+            </section>
+            <section class="fiveSection">
+                <h2 class="fiveSection_h">ОТЗЫВЫ</h2>
+                <div class="fiveSection_Images">
+                    <img class="reviews" src="image/review1.png">
+                    <img class="reviews" src="image/review2.png">
+                    <img class="reviews" src="image/review3.png">
                 </div>
             </section>
 
