feat: сделана карта

--- a/figma2/index.html
+++ b/figma2/index.html
@@ -126,6 +126,14 @@
                     <img class="reviews" src="image/review3.png">
                 </div>
             </section>
+            <section class="sixSection">
+                <img class="MebellaCard" src="image/mebellaCard.png">
+                <img class="point" src="image/poiny.png">
+            </section>
+            <footer class="footer">
+
+
+            </footer>
 
         </main>
 
