feat: сделан футер
- нужна доработка отступов

--- a/figma2/index.html
+++ b/figma2/index.html
@@ -131,8 +131,47 @@
                 <img class="point" src="image/poiny.png">
             </section>
             <footer class="footer">
-
-
+                <div class="footer_item">
+                    <div class="footer_columns">
+                        <img class="Mebella_footer_logo" src="image/Mebella_footer_image.png">
+                        <span>+7 (4872) 710-150</span>
+                    </div>
+                    <div class="tables">
+                        <div class="navtable">
+                            <h3 class="navtable_H">Каталог</h3>
+                            <a>Ангажмент</a>
+                            <a>Фабрика Мирлачева</a>
+                            <a>Pro Son</a>
+                        </div>
+                        <div class="navtable">
+                            <h3 class="navtable_H">Покупателю</h3>
+                            <a>Как оплатить</a>
+                            <a>Как получить</a>
+                            <a>Гарантия</a>
+                        </div>
+                        <div class="navtable">
+                            <h3 class="navtable_H">О компании</h3>
+                            <a>О нас</a>
+                            <a>Контакты</a>
+                            <a>Статьи</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="hr"></div>
+                <div class="footer_item">
+                    <div class="mebelloCopyright">
+                        © Mebello, . 2024.
+                    </div>
+                    <div class="SocialContainer">
+                        <img class="socialMedia" src="image/socialMedia1.png">
+                        <img class="socialMedia" src="image/socialMedia2.png">
+                        <img class="socialMedia" src="image/socialMedia3.png">
+                        <img class="socialMedia" src="image/socialMedia4.png">
+                    </div>
+                </div>
+                <div>
+                    Сайт разработан в Это-Веб
+                </div>
             </footer>
 
         </main>
