feat: сделаны карточки

--- a/figma2/index.html
+++ b/figma2/index.html
@@ -73,17 +73,57 @@
                 </div>
             </section>
             <section class="secondSection">
-                <div class="secondSection_card" >
-
+                <div class="secondSection_card firstcard" >
+                    <div class="card_h">
+                        Кресла Vancouver
+                        4 по цене 3
+                    </div>
+                    <div class="card_text">
+                        Покупая 3 кресла Vancouver получаете четвертое  в подарок.
+                        Для участия в акции достаточно добавить в заказ 3 кресла и при 
+                        оформлении наш менеджер уточнит желаете ли вы 
+                        получить четвертое.
+                    </div>
+                    <div class="circle">
+                        <span>?</span>
+                    </div>
                 </div>
-                <div class="secondSection_card" >
-
+                <div class="secondSection_card fourcard" >
+                    <div class="card_h">
+                        Пуф в подарок
+                    </div>
+                    <div class="card_text">
+                        При покупке дивана от 150 000 ₽ вы получаете пуф в подарок
+                    </div>
+                    <img  src="image/seri_divan.png">
+                    <div class="circle">
+                        <span>?</span>
+                    </div>
                 </div>
-                <div class="secondSection_card" >
-
+                <div class="secondSection_card thirdcard" >
+                    <div class="card_h">
+                        Скидки<br>
+                        ко Дню России
+                    </div>
+                    <div class="den_rosi">
+                        <span class="card_procent">3%</span><span class="card_navse">На всё</span>
+                    </div>
+                    <div class="circle">
+                        <span>?</span>
+                    </div>
                 </div>
-                <div class="secondSection_card" >
-
+                <div class="secondSection_card secondcard" >
+                    <div class="card_h">Кресла Vancouver</div>
+                    <div class="card_procent card_procent">
+                        33 400 ₽ 
+                    </div>
+                    <div class="card_text">
+                        Недорогие и стильные кресла с множеством вариантов обивки
+                    </div>
+                    <img class="stulV" src="image/stul.png">
+                    <div class="circle">
+                        <span>?</span>
+                    </div>
                 </div>
             </section>
             <section class="thirdSection">
@@ -131,34 +171,34 @@
                 <img class="point" src="image/poiny.png">
             </section>
             <footer class="footer">
-                <div class="footer_item">
+                <div class="footer_item footer_item_firstMargin">
                     <div class="footer_columns">
                         <img class="Mebella_footer_logo" src="image/Mebella_footer_image.png">
-                        <span>+7 (4872) 710-150</span>
+                        <span class="footerPhone">+7 (4872) 710-150</span>
                     </div>
                     <div class="tables">
                         <div class="navtable">
                             <h3 class="navtable_H">Каталог</h3>
-                            <a>Ангажмент</a>
-                            <a>Фабрика Мирлачева</a>
-                            <a>Pro Son</a>
+                            <a class="footer_a">Ангажмент</a>
+                            <a class="footer_a">Фабрика Мирлачева</a>
+                            <a class="footer_a">Pro Son</a>
                         </div>
                         <div class="navtable">
                             <h3 class="navtable_H">Покупателю</h3>
-                            <a>Как оплатить</a>
-                            <a>Как получить</a>
-                            <a>Гарантия</a>
+                            <a class="footer_a">Как оплатить</a>
+                            <a class="footer_a">Как получить</a>
+                            <a class="footer_a">Гарантия</a>
                         </div>
                         <div class="navtable">
                             <h3 class="navtable_H">О компании</h3>
-                            <a>О нас</a>
-                            <a>Контакты</a>
-                            <a>Статьи</a>
+                            <a class="footer_a">О нас</a>
+                            <a class="footer_a">Контакты</a>
+                            <a class="footer_a">Статьи</a>
                         </div>
                     </div>
                 </div>
                 <div class="hr"></div>
-                <div class="footer_item">
+                <div class="footer_item footer_item_lastMargin">
                     <div class="mebelloCopyright">
                         © Mebello, . 2024.
                     </div>
