feat: Макет сверстан

--- a/figma3/index.html
+++ b/figma3/index.html
@@ -70,7 +70,7 @@
                     <h2 class="littleContainer__H">Домашний интернет</h2>
                     <p class="littleContainer__p"><img src="image/Wifi.svg" class="p__icon">от 300 Мбит / сек</p>
                     <div class="littleContainer__buttonContainer">
-                        <button class="littleContainer__button">
+                        <button class="buttonContainer__button">
                             Оставить заявку
                         </button>
                         <button class="buttonContainer__Podrobnee">
@@ -138,7 +138,42 @@
             <img class="thirdSection__map2" src="image/map2.svg">
             <img class="thirdSection__map3" src="image/map3.svg">
         </section>
-
     </main>
+    <footer class="footer">
+        <div class="footer__Logotable">
+            <p class="Logotable__text footer__blueText">Твой мир с новыми возможностями!</p>
+            <div class="Logotable__LogoContainer">
+                <img src="image/b.svg" class="Logo_latter">
+                <img src="image/o.svg" class="Logo_latter">
+                <img src="image/l.svg" class="Logo_latter">
+                <img src="image/n.svg" class="Logo_latter">
+                <img src="image/a.svg" class="Logo_latter">
+                <img src="image/Vector-1.svg" class="Logo_vector1">
+                <img src="image/Vector.svg" class="Logo_vector2">
+            </div>
+        </div>
+        <ul class="footer__smalltable">
+            <li class="smalltable__text smalltable__text--first">Тарифы и опции</li>
+            <li class="smalltable__text">Услуги</li>
+            <li class="smalltable__text">Оплаты</li>
+            <li class="smalltable__text">Личный кабинет</li>
+        </ul>
+        <ul class="footer__smalltable">
+            <li class="smalltable__text smalltable__text--first">Покрытие</li>
+            <li class="smalltable__text">О компании</li>
+            <li class="smalltable__text">Новости</li>
+            <li class="smalltable__text">Поддержка</li>
+        </ul>
+        <ul class="footer__phonestable">
+            <li class="phonestable__text phonestable__text--first">Проверка баланса - <span class="footer__blueText">*100#</span></li>
+            <li class="phonestable__text">Узнать свой номер телейфона - <span class="footer__blueText">*200#</span></li>
+            <li class="phonestable__text">Остатки пакетов улуг - <span class="footer__blueText"> *101#</span></li>
+            </ul>
+        <ul class="footer_copyright">
+            <li class="copyright__text copyright__text--first">Служба поддержки</li>
+            <li class="copyright__phone footer__blueText">8 900 123 45 67</li>
+            <li class="copyright__text--last">© 2022 ООО «КТК ТЕЛЕКОМ»</li>
+        </ul>
+    </footer>
 </body>
 </html>
